# CmakePractice

./: readme.txt
demo1/: CMakeLists.txt
demo2/: CMakeLists.txt
demo2/doc/: demo2.txt
demo2/src/: CMakeLists.txt  main.c
demo3/: CMakeLists.txt
demo3/lib/: CMakeLists.txt  hello.c  hello.h
demo4/: CMakeLists.txt
demo4/src/: CMakeLists.txt  main.c
demo6/: CMakeLists.txt
demo6/cmake/: FindHELLO.cmake
demo6/src/: CMakeLists.txt  main.c
