PROJECT(HELLO)
CMAKE_MINiMUM_REQUIRED(VERSION 3.1)
MESSAGE(STATUS "This is BINNERY dir " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})

INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake_demoes/demo2)
INSTALL(PROGRAMS rundemo2.sh DESTINATION bin)
INSTALL(PROGRAMS ${PROJECT_BINARY_DIR}/bin/demo2 DESTINATION bin)
INSTALL(DIRECTORY doc/  DESTINATION share/doc/cmake_demoes/demo2)

ADD_SUBDIRECTORY(src bin)
